Update hidden panels and nav to work correctly on small screens

--- a/assets/css/3-layouts/_header-landing.sass
+++ b/assets/css/3-layouts/_header-landing.sass
@@ -3,7 +3,7 @@ nav
     position: absolute
     width: 34%
     height: 100%
-    left: $landing-two-thirds:
+    left: $landing-two-thirds
     background-color: white
     transition: all 400ms ease-out
     z-index: 3
@@ -54,7 +54,7 @@ nav
 
     .landing-nav.show-mobile-nav
       left: $landing-third
-      width: $landing-two-thirds:
+      width: $landing-two-thirds
       border-left: 2px solid $light-gray
 
     .landing-nav .close-icon
