--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -573,7 +573,7 @@ nav .landing-nav {
     z-index: 5; }
   nav .landing-nav.show-mobile-nav {
     left: 34%;
-    width: 66.6%;
+    width: 66%;
     border-left: 2px solid #f2f2f2; }
   nav .landing-nav .close-icon {
     display: block;
@@ -585,7 +585,7 @@ nav .landing-nav {
 
 section#landing {
   position: absolute;
-  width: 66.6%;
+  width: 66%;
   height: 100%; }
   section#landing .landing-wrap {
     height: 100%; }
@@ -623,28 +623,33 @@ section#landing {
 
 section#who {
   position: absolute;
-  width: 66.6%;
+  width: 34%;
   height: 33.3%;
-  left: 66.6%;
+  left: 66%;
   background-color: blue;
   color: white;
-  transition: all 400ms ease-in-out;
+  transition: all 300ms ease-in-out;
   z-index: 2; }
 
 section#who.show {
   left: 0;
   height: 100%;
-  width: 66.6%; }
+  width: 66%; }
   section#who.show .icon {
     display: none; }
 
 @media (max-width: 767px) {
   section#who {
-    width: 100%; }
-  section#who .icon {
+    width: 100%;
+    left: 100%; }
+  .home-wrap section#who .icon {
     display: block;
     float: right;
-    margin: 10px; } }
+    margin: 10px; }
+  section#who.show {
+    left: 0;
+    height: 100%;
+    width: 100%; } }
 
 .nav-bar {
   width: 100%;
